# astra

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.agents/skills/project-guide/: SKILL.md
.github/workflows/: build-macos.yml  build-windows.yml  build.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  chat_sessions.rs  command_runner.rs  downloader.rs  lib.rs  main.rs  providers.rs
src/lib/: ChatToolbar.svelte  chat-state.svelte.ts  nm-store.svelte.ts  theme.svelte.ts  workspace.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/chat/: +page.svelte  MarkdownMessage.svelte
src/routes/models/: +page.svelte
src/routes/models/[id]/: +page.svelte
src/routes/providers/: +page.svelte
src/routes/providers/[id]/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/skills/: +page.svelte
src/routes/skills/[name]/: +page.svelte
src/routes/tools/: +page.svelte
src/routes/tools/downloader/: +page.svelte
src/routes/tools/nm/: +page.svelte
src/styles/: global.css
